<resources>
    <string name="app_name">&app_name;</string>
    <string name="filter_title_event_picking">Filter for app indexing and URI</string>
    <string name="scheduled_item_no_artist">Unknown artist</string>
    <string name="scheduled_item_no_genre">Unknown genre</string>
    <string name="scheduled_item_no_description">Sorry! There is no description for this activity :/</string>
    <string name="scheduled_item_no_date">Unknown date</string>
    <string name="scheduled_items_empty">Sorry! There are no registered activities for this event :/</string>
    <string name="news_empty">The event organizer hasn\'t published any news yet.</string>
    <string name="my_schedule_empty">There is currently no saved activities for this event</string>
    <string name="send_news_failed">Cannot publish news. Try again later!</string>
    <string name="main_fragment_join_event">Join</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_account_display">My account</string>
    <string name="title_activity_event_picking">EventPickingActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_login_facebook">login with facebook</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="error_field_required">Required field</string>
    <string name="error_field_invalid">Invalid value</string>
    <string name="empty_password_error">The password cannot be empty</string>
    <string name="password_match_error">The passwords do not match</string>
    <string name="generic_auth_error">Could not authenticate. Unknown error.</string>
    <string name="help_text_activity_event_picking">Please select an event to continue</string>
    <string name="help_text_go_join_events">Please go explore and join an event to continue !</string>
    <string name="joined_help_text_activity_event_picking">Events you joined:</string>
    <string name="not_joined_help_text_activity_event_picking">Click here to go explore events !</string>
    <string name="double_back_press_to_exit">Press once again to exit</string>
    <string name="no_more_events_to_explore">Sorry, you\'ve already joined all the available events for now :\'( ! \n
        Please come back later !
    </string>
    <string name="event_successfully_joined">Event successfully joined !</string>
    <string name="event_successfully_unjoined">Event successfully unjoined !</string>
    <string name="successful_login_toast">Signed in</string>
    <string name="successful_registration_toast">Registered successfully</string>
    <string name="logout_toast">Logged out</string>
    <string name="email_field">Email address</string>
    <string name="password_field">Password</string>
    <string name="password_confirmation_field">Password confirmation</string>
    <string name="login_button">Sign in</string>
    <string name="signup_button">Sign up</string>
    <string name="logout_button">Log out</string>
    <string name="account_button">My account</string>
    <string name="back_button">Back</string>
    <string name="join_event_event_item_btn">Join Event</string>
    <string name="goto_event_btn">Go to event</string>
    <string name="add_button">Add</string>
    <string name="add_user_success">Add request sent</string>
    <string name="add_user_failure">Could not send add request</string>
    <string name="remove_user_success">Removal request sent</string>
    <string name="remove_user_failure">Could not send the removal request</string>
    <string name="main_nav_item_activity_event_showcase">Description</string>
    <string name="map_nav_item_activity_event_showcase">Map</string>
    <string name="schedule_nav_item_activity_event_showcase">Schedule</string>
    <string name="ticket_nav_item_activity_event_showcase">Tickets</string>
    <string name="contact_nav_item_activity_event_showcase">Contact</string>
    <string name="admin_nav_item_activity_event_showcase">Admin</string>
    <string name="pick_event_nav_item_activity_event_showcase">Event picker</string>
    <string name="user_management_nav_item_activity_event">User management</string>
    <string name="showcase_nav_item_activity_event">Public area</string>
    <string name="send_news_nav_item_activity_event">Publish news</string>
    <string name="edit_schedule_nav_item_activity_event">Edit schedule</string>
    <string name="admin_main_nav_item_activity_event">Help</string>
    <string name="admin_help_text">
        This section allows you to manage an event. You can go back to the public
        section using the "Public area" at the bottom of the sidebar.\n
        \n
        There is two level of rights, STAFF and ADMIN: while a STAFF is only able to see the
        "Scan ticket" (if the event contains a ticketing configuration) navigation entry on the
        public area, an admin is able to:
            - Manage user roles.\n
            - Publish news.\n
            - Broadcast a notification to any user which joined the event.\n
            - Edit the schedule and the details of the event.\n
    </string>
    <string name="user_management_help_text">This page allows you to add and remove roles specific
        to this event.
    </string>
    <string name="user_list_left_header">User/Role</string>
    <string name="user_list_right_header">Actions</string>
    <string name="timeline_view_added_to_own_schedule">Event added to your schedule!</string>
    <string name="timeline_view_removed_from_own_schedule">Event removed from your schedule!</string>
    <string name="my_schedule_nav_item_activity_event_showcase">My Schedule</string>
    <string name="contact_form_hint_subject">Subject</string>
    <string name="contact_form_hint_message">Content of the message</string>
    <string name="contact_form_hint_name">Full name</string>
    <string name="contact_form_send_button_text">Send</string>
    <string name="contact_form_choose_mail">Send email with</string>
    <string name="contact_form_no_email_clients">There are no email clients installed.</string>
    <string name="contact_form_main_go_button">Contact</string>
    <string name="contact_form_error">Field cannot be empty</string>
    <string name="my_schedule_add_to_calendar">Add to my calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_nav_item_activity_event_showcase">News</string>
    <string name="pick_configuration">Pick a scanning configuration</string>
    <string name="loading_text">Loading…</string>
    <string name="loading_failed">Loading failed : %1$s</string>
    <string name="ticketing_missing_service">Internal error (missing API service)</string>
    <string name="scan_nav_item_activity_event_showcase">Scan Tickets</string>
    <string name="ticketing_scan_success">Valid ticket!</string>
    <string name="ticketing_scan_failure">Invalid ticket :(</string>
    <string name="ticketing_scan_user">Buyer:</string>
    <string name="ticketing_scan_bought_product">Ticket details:</string>
    <string name="ticketing_requires_login">You have to be logged in to do that.</string>
    <string name="ticketing_title_text">Login for Scanning Services</string>
    <string name="send_news_title">Create a news</string>
    <string name="send_news_title_field">Title</string>
    <string name="send_news_content">News content</string>
    <string name="send_news_send_button">Send</string>
    <string name="news_create">Create a news</string>
    <string name="title_activity_login_facebook">LoginFacebookActivity</string>
    <string name="facebook_app_id">2089713884652770</string>
    <string name="fb_login_protocol_scheme">fb2089713884652770</string>
    <string name="cancel_login_facebook">cancel login</string>
    <string name="error_login_facebook">error login</string>
    <string name="tag_facebook_login_back_button">tag back button from facebook login</string>
    <string name="tag_eventID__from_news">tag eventID from the news</string>
    <string name="event_thumbnail">Event thumbnail</string>
    <string name="display_account_activity_logged_as">Logged as:&#160;</string>
    <string name="event_list_item_default_title">Event name</string>
    <string name="event_list_item_default_description">This is a quick summary of the event</string>
    <string name="contentDescription_custom_drawer">ImageView holding the custom marker image</string>
    <string name="main_fragment_image_contentDescription">Image representing the event</string>
    <string name="main_fragment_button_news">News</string>
    <string name="main_fragment_button_map">Map</string>
    <string name="main_fragment_button_schedule">Schedule</string>
    <string name="event_feedback_submitted">Your feedback has been submitted !</string>
    <string name="event_feedback_already_submitted">Your feedback has already been submitted !</string>
    <string name="click_to_see_schedule">Click to see schedule</string>
    <string name="undo">Undo</string>
    <string name="welcome">Welcome on &app_name; !</string>
    <string name="done">Done</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="undone">Undone</string>
    <string name="undo_empty">Nothing to undo</string>
    <string name="ok">OK</string>
    <string name="save_and_exit">Do you want to save and exit ?</string>
    <string name="create_form_hint_name">Name of the event</string>
    <string name="create_form_hint_description">Description of the event</string>
    <string name="create_form_hint_email">Email of the event organizer</string>
    <string name="create_form_hint_twitter_handle">(Optional) Event twitter handle</string>
    <string name="create_form_hint_begin_date">Beginning date</string>
    <string name="create_form_hint_end_date">Ending date</string>
    <string name="create_form_upload_image">Upload image</string>
    <string name="image_successfully_uploaded">Event image successfully uploaded !</string>
    <string name="event_form_button_visibility">Allow public access to this event</string>
    <string name="create_form_delete_event_button">Delete this event !</string>
    <string name="button_yes">YES !</string>
    <string name="button_no">NO !</string>
    <string name="create_event_title">Create Event</string>
    <string name="edit_nav_item_activity_event">Event edition</string>
    <string name="create_event_canceled">Operation was unexpectedly cancelled.</string>
    <string name="simple_edit_text">Edit</string>
    <string name="ticket_scanning">Ticket scanning</string>
    <string name="ticket_scanning_vibrations_switch_title">Vibrations</string>
    <string name="ticket_scanning_sound_switch_title">Sound</string>
    <string name="send_notification_title">Create a notification</string>
    <string name="send_notification_title_field">Title</string>
    <string name="send_notification_content">Notification content</string>
    <string name="send_notification_send_button">Send</string>
    <string name="send_notification_nav_item_activity_event">Send Notification</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="key_settings_notifications_switch">settings_notifications_switch</string>
    <string name="join_switch_button">join</string>
    <string name="schedule_create_form_hint_begin_date">Begin date of the scheduled element</string>
    <string name="schedule_create_form_hint_artist">Artist / Speaker</string>
    <string name="schedule_create_form_hint_genre">Type of the element (Rock Concert, Conference, …)</string>
    <string name="schedule_create_form_hint_room">Room</string>
    <string name="schedule_create_form_hint_description">Description</string>
    <string name="schedule_create_form_hint_duration">Duration</string>
    <string name="schedule_create_form_hint_begin_time">Begin time of the scheduled element</string>
</resources>