<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">


    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:id="@+id/create_form"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/create_form_name"
            android:hint="@string/create_form_hint_name"
            android:layout_weight="10"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/create_form_email"
            android:hint="@string/create_form_hint_email"
            android:layout_weight="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/create_form_twitter_handle"
            android:hint="@string/create_form_hint_twitter_handle"
            android:layout_weight="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_form_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:hint="@string/create_form_hint_description"
            android:inputType="textMultiLine"
            android:layout_weight="70"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_form_send_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/contact_form_send_button_text"
            android:layout_weight="10"
            style="@style/Button_global"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>