<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layout_marginRight="8dp"
    tools:context="ch.epfl.sweng.eventmanager.ui.event.interaction.fragments.NewsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/send_news_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_anchor="@id/title"
            app:layout_anchorGravity="center_horizontal" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/send_news_title_field"
            android:inputType="text" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/send_news_content"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_news_send_button"
            app:layout_anchorGravity="center_horizontal" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>