<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".ui.eventShowcase.fragments.EventMainFragment"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:layout_margin="8dp"
        android:contentDescription="@string/main_fragment_image_contentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/white" />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="367dp"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:layout_margin="8dp"
        android:text="@string/main_fragment_error_no_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:id="@+id/main_fragment_button_bar">

        <Button
            android:id="@+id/main_fragment_news"
            style="@style/Button_barButton_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/main_fragment_button_news" />

        <Button
            android:id="@+id/main_fragment_schedule"
            style="@style/Button_barButton_middle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/main_fragment_button_schedule" />

        <Button
            android:id="@+id/main_fragment_map"
            style="@style/Button_barButton_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/main_fragment_button_map" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/main_fragment_relative">

        <Switch
            android:id="@+id/join_event_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:text="@string/title_activity_join_event_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.929"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/contact_form_go_button"
            style="@style/Button_global"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:text="@string/contact_form_main_go_button" />

    </RelativeLayout>

</LinearLayout>
